--- a/.github/workflows/main_win.yml
+++ b/.github/workflows/main_win.yml
@@ -52,7 +52,7 @@ jobs:
         env:
           BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
           CHANNEL: windows
-          ITCH_GAME: topar-sample
+          ITCH_GAME: ${{vars.ITCHIO_PAGE}}
           ITCH_USER: peryloth
           PACKAGE: build
       - name: Cleanup to avoid storage limit
