--- a/.github/workflows/Android_prod.yml
+++ b/.github/workflows/Android_prod.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch: {}
   pull_request:
     branches:
-      - develop
+      - main
 jobs:
   build:
     name: Build Project
