--- a/.github/workflows/main_win.yml
+++ b/.github/workflows/main_win.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch: {}
   pull_request:
     branches:
-      - main
+      - develop
 jobs:
   build:
     name: Build Project
