--- a/.github/workflows/main_Android.yml
+++ b/.github/workflows/main_Android.yml
@@ -31,7 +31,9 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
+          buildMethod: UnityBuilderAction.BuildScript.Build
           targetPlatform: Android
+          unityVersion: auto
       - uses: actions/upload-artifact@v4
         with:
           name: build-Android
