--- a/.github/workflows/main_Android.yml
+++ b/.github/workflows/main_Android.yml
@@ -11,6 +11,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        projectPath:
+          - ./
         unityVersion:
           - 2022.3.22f1
         targetPlatform:
@@ -29,13 +31,20 @@ jobs:
       # Cache
       - uses: actions/cache@v3
         with:
+          path: ${{ matrix.projectPath }}/Library
           path: ./Library
           key:
+            Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}-${{
+            hashFiles(matrix.projectPath) }}
             Library--${{ matrix.targetPlatform }}-
           restore-keys: |
+            Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}-
+            Library-${{ matrix.projectPath }}-
             Library-${{ matrix.targetPlatform }}-
             Library-
       # Build
+      - if: matrix.targetPlatform == 'Android'
+        uses: jlumbroso/free-disk-space@v1.2.0
       - name: Build project
         uses: game-ci/unity-builder@v4
         env:
@@ -43,8 +52,10 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
+          projectPath: ${{ matrix.projectPath }}
           unityVersion: ${{ matrix.unityVersion }}
           targetPlatform: ${{ matrix.targetPlatform }}
+          customParameters: '-myParameter myValue -myBoolean -ThirdParameter andItsValue'
       - uses: actions/upload-artifact@v3
         with:
           name: build-Android
@@ -68,8 +79,3 @@ jobs:
           ITCH_GAME: ${{vars.ITCHIO_PAGE}}
           ITCH_USER: peryloth
           PACKAGE: build/Android
-      - name: Cleanup to avoid storage limit
-        if: always()
-        uses: geekyeggo/delete-artifact@v1
-        with:
-            name: build-Windows
