--- a/.github/workflows/main_Android.yml
+++ b/.github/workflows/main_Android.yml
@@ -79,3 +79,8 @@ jobs:
           ITCH_GAME: ${{vars.ITCHIO_PAGE}}
           ITCH_USER: peryloth
           PACKAGE: build/Android
+      - name: Cleanup to avoid storage limit
+        if: always()
+        uses: geekyeggo/delete-artifact@v1
+        with:
+            name: build-Android
