--- a/.github/workflows/main_Android.yml
+++ b/.github/workflows/main_Android.yml
@@ -6,13 +6,11 @@ on:
       - develop
 jobs:
   build:
-    name: Build Project
+    name: Build for ${{matrix.targetPlatform}}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        projectPath:
-          - ./
         unityVersion:
           - 2022.3.22f1
         targetPlatform:
@@ -22,31 +20,21 @@ jobs:
       group: unity-build-android
       cancel-in-progress: true
     steps:
-      # Checkout
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0
           lfs: true
       # Cache
-      - uses: actions/cache@v3
+      - uses: actions/cache@v2
         with:
-          path: ${{ matrix.projectPath }}/Library
-          path: ./Library
+          path: Library
           key:
-            Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}-${{
-            hashFiles(matrix.projectPath) }}
-            Library--${{ matrix.targetPlatform }}-
+            Library-${{ matrix.targetPlatform }}
           restore-keys: |
-            Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}-
-            Library-${{ matrix.projectPath }}-
             Library-${{ matrix.targetPlatform }}-
             Library-
       # Build
-      - if: matrix.targetPlatform == 'Android'
-        uses: jlumbroso/free-disk-space@v1.2.0
-      - name: Build project
-        uses: game-ci/unity-builder@v4
+      - uses: game-ci/unity-builder@v2
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
@@ -56,7 +44,8 @@ jobs:
           unityVersion: ${{ matrix.unityVersion }}
           targetPlatform: ${{ matrix.targetPlatform }}
           customParameters: '-myParameter myValue -myBoolean -ThirdParameter andItsValue'
-      - uses: actions/upload-artifact@v3
+          allowDirtyBuild: true
+      - uses: actions/upload-artifact@v2
         with:
           name: build-Android
           path: build/Android
