--- a/.github/workflows/main_Android.yml
+++ b/.github/workflows/main_Android.yml
@@ -6,45 +6,30 @@ on:
       - develop
 jobs:
   build:
-    name: Build for ${{matrix.targetPlatform}}
+    name: Build Project
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        unityVersion:
-          - 2022.3.22f1
-        targetPlatform:
-          - Android # Build an Android player.
     # This stops builds that are in-progress once a new commit comes in
     concurrency: 
       group: unity-build-android
       cancel-in-progress: true
     steps:
-      - uses: actions/checkout@v2
+      # Checkout
+      - name: Checkout repository
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 0
           lfs: true
       # Cache
       - uses: actions/cache@v2
         with:
           path: Library
-          key:
-            Library-${{ matrix.targetPlatform }}
-          restore-keys: |
-            Library-${{ matrix.targetPlatform }}-
-            Library-
+          key: Library
       # Build
-      - uses: game-ci/unity-builder@v2
+      - name: Build project
+        uses: game-ci/unity-builder@v2
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          projectPath: ${{ matrix.projectPath }}
-          unityVersion: ${{ matrix.unityVersion }}
-          targetPlatform: ${{ matrix.targetPlatform }}
-          customParameters: '-myParameter myValue -myBoolean -ThirdParameter andItsValue'
-          allowDirtyBuild: true
+          targetPlatform: Android
       - uses: actions/upload-artifact@v2
         with:
           name: build-Android
