--- a/.github/workflows/main_Android.yml
+++ b/.github/workflows/main_Android.yml
@@ -6,35 +6,63 @@ on:
       - develop
 jobs:
   build:
-    name: Build Project
+    name: Build for ${{ matrix.targetPlatform }}
     runs-on: ubuntu-latest
-    # This stops builds that are in-progress once a new commit comes in
-    concurrency: 
-      group: unity-build-android
-      cancel-in-progress: true
+    strategy:
+      fail-fast: false
+      matrix:
+        # projectPath:
+          # - test-project
+        unityVersion:
+          - 2022.3.22f1
+        targetPlatform:
+          - Android # Build an Android player.
     steps:
-      # Checkout
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           lfs: true
-      # Cache
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         with:
-          path: Library
-          key: Library
-      # Build
-      - name: Build project
-        uses: game-ci/unity-builder@v2
+          path: ${{ matrix.projectPath }}/Library
+          key:
+            Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}-${{
+            hashFiles(matrix.projectPath) }}
+          restore-keys: |
+            Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}-
+            Library-${{ matrix.projectPath }}-
+            Library-
+      - uses: game-ci/unity-test-runner@v4
+        id: testRunner
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          targetPlatform: Android
-      - uses: actions/upload-artifact@v2
+          projectPath: ${{ matrix.projectPath }}
+          unityVersion: ${{ matrix.unityVersion }}
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: Test results (all modes)
+          path: ${{ steps.testRunner.outputs.artifactsPath }}
+      - if: matrix.targetPlatform == 'Android'
+        uses: jlumbroso/free-disk-space@v1.2.0
+      - uses: game-ci/unity-builder@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        with:
+          projectPath: ${{ matrix.projectPath }}
+          unityVersion: ${{ matrix.unityVersion }}
+          targetPlatform: ${{ matrix.targetPlatform }}
+          customParameters: '-myParameter myValue -myBoolean -ThirdParameter andItsValue'
+      - uses: actions/upload-artifact@v3
         with:
           name: build-Android
           path: build/Android
-      
   deploy:
     name: Butler Push to Itch
     runs-on: ubuntu-latest
