--- a/.github/workflows/Android_prod.yml
+++ b/.github/workflows/Android_prod.yml
@@ -5,6 +5,7 @@ jobs:
   build:
     name: Build for ${{ matrix.targetPlatform }}
     runs-on: ubuntu-latest
+    environment: production
     strategy:
       fail-fast: false
       matrix:
