--- a/.github/workflows/Android_prod.yml
+++ b/.github/workflows/Android_prod.yml
@@ -1,6 +1,9 @@
 name: Actions Android Prod 😎
 on:
   workflow_dispatch: {}
+  pull_request:
+    branches:
+      - main
 jobs:
   build:
     name: Build for ${{ matrix.targetPlatform }}
