--- a/.github/workflows/Android_Production_Playstore.yml
+++ b/.github/workflows/Android_Production_Playstore.yml
@@ -59,8 +59,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Download Artefact
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v4
         with:
           name: build-Android
           path: build/Android
