--- a/.github/workflows/Android_Production_Playstore.yml
+++ b/.github/workflows/Android_Production_Playstore.yml
@@ -11,12 +11,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # projectPath:
-          # - test-project
         unityVersion:
           - 2022.3.22f1
         targetPlatform:
-          - Android # Build an Android player.
+          - Android
     steps:
       - uses: actions/checkout@v4
         with:
@@ -44,12 +42,14 @@ jobs:
           unityVersion: ${{ matrix.unityVersion }}
           targetPlatform: ${{ matrix.targetPlatform }}
           androidAppBundle: true
-          androidKeystoreName: user # This file won't exist, but this property needs to exist
+          androidKeystoreName: user
           androidKeystoreBase64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
           androidKeystorePass: ${{ secrets.ANDROID_KEYSTORE_PASS }}
           androidKeyaliasName: ${{ secrets.ANDROID_KEYALIAS_NAME }}
           androidKeyaliasPass: ${{ secrets.ANDROID_KEYALIAS_PASS }}
           androidTargetSdkVersion: AndroidApiLevel33
+      - name: List files
+        run: ls -R build/Android
       - uses: actions/upload-artifact@v4
         with:
           name: build-Android
