--- a/.github/workflows/Android_Production_Playstore.yml
+++ b/.github/workflows/Android_Production_Playstore.yml
@@ -1,6 +1,6 @@
 name: Actions Android Production Playstore 😎
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
   pull_request:
     branches:
       - Playstore
