--- a/.github/workflows/Android_Production_Playstore.yml
+++ b/.github/workflows/Android_Production_Playstore.yml
@@ -63,7 +63,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_JSON }}
-          packageName: com.bellseboss.topor
+          packageName: com.Bellseboss.Topor
           releaseFiles: build/Android/Android.aab
           status: draft
           track: production
