--- a/.github/workflows/Android_Production_Playstore.yml
+++ b/.github/workflows/Android_Production_Playstore.yml
@@ -66,7 +66,7 @@ jobs:
           packageName: com.Bellseboss.Topor
           releaseFiles: build/Android/Android.aab
           status: draft
-          track: production
+          track: internal
       - name: Cleanup to avoid storage limit
         if: always()
         uses: geekyeggo/delete-artifact@v1
