--- a/.github/workflows/main_Android.yml
+++ b/.github/workflows/main_Android.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Create necessary directories
-        run: mkdir -p /root/.cache/unity3d
+        run: mkdir -p $GITHUB_WORKSPACE/.cache/unity3d
   
       - name: Display directory structure
         run: |
