--- a/.github/workflows/main_Android.yml
+++ b/.github/workflows/main_Android.yml
@@ -22,12 +22,25 @@ jobs:
           - Android # Build an Android player.
     steps:
      
-      - name: Check out repository
-        uses: actions/checkout@v4
-      
-      - name: Clean Unity Cache
-        run: rm -rf Library Temp obj
-      
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          lfs: true
+          
+      - uses: actions/cache@v3
+        with:
+          path: ${{ matrix.projectPath }}/Library
+          key:
+            Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}-${{
+            hashFiles(matrix.projectPath) }}
+          restore-keys: |
+            Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}-
+            Library-${{ matrix.projectPath }}-
+            Library-
+            
+      - if: matrix.targetPlatform == 'Android'
+        uses: jlumbroso/free-disk-space@v1.2.0
+          
       - uses: game-ci/unity-builder@v4
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
