--- a/.github/workflows/Android_new_Build_dev.yml
+++ b/.github/workflows/Android_new_Build_dev.yml
@@ -15,8 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        projectPath:
-          - test-project
+        #projectPath:
+          #- test-project
         unityVersion:
           - 2022.3.56f1
         targetPlatform:
